test/trivial/bradc/entrypoint/twomains.good
Error: main multiply defined -- first occurrence at twomains.chpl:4 (twomains.chpl:11)

